--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
         <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>4.0.1</version> <!-- ou a versão mais recente disponível -->
+		<scope>provided</scope>
+	</dependency>
+
 	</dependencies>
 
 	<build>
